[gd_scene load_steps=5 format=3 uid="uid://sx45aaxd3bt1"]

[ext_resource type="Script" uid="uid://dpiayxy61h1js" path="res://ui/menus/recipe_menu/recipe_menu.gd" id="1_npolj"]
[ext_resource type="PackedScene" uid="uid://8atbe64nu4qe" path="res://ui/menus/recipe_menu/components/recipe_type_button_vbox.tscn" id="2_solgh"]
[ext_resource type="PackedScene" uid="uid://bfm7atx3a0lat" path="res://ui/menus/recipe_menu/components/tower_and_slate_scroll_container.tscn" id="3_solgh"]
[ext_resource type="PackedScene" uid="uid://cbr4cbp4x416s" path="res://ui/menus/recipe_menu/components/buildable_tower_info_container.tscn" id="4_eic4r"]

[node name="RecipeMenu" type="CanvasLayer" node_paths=PackedStringArray("RETURN_TO_MENU_BUTTON", "RECIPE_TYPE_BUTTON_VBOX", "TOWER_AND_SLATE_BUTTONS", "BUILDABLE_TOWER_INFO_CONTAINER")]
script = ExtResource("1_npolj")
RETURN_TO_MENU_BUTTON = NodePath("HBoxContainer/VBoxContainer/ReturnToMainMenu")
RECIPE_TYPE_BUTTON_VBOX = NodePath("HBoxContainer/VBoxContainer/RecipeTypeButtonVbox")
TOWER_AND_SLATE_BUTTONS = NodePath("HBoxContainer/TowerAndSlateScrollContainer")
BUILDABLE_TOWER_INFO_CONTAINER = NodePath("BuildableTowerInfoContainer")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -265.0
offset_top = -201.0
offset_bottom = 202.0
grow_horizontal = 0
grow_vertical = 2

[node name="TowerAndSlateScrollContainer" parent="HBoxContainer" instance=ExtResource("3_solgh")]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="RecipeTypeButtonVbox" parent="HBoxContainer/VBoxContainer" instance=ExtResource("2_solgh")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
alignment = 1

[node name="ReturnToMainMenu" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Return to
Main Menu"

[node name="BuildableTowerInfoContainer" parent="." instance=ExtResource("4_eic4r")]
